TEST_PROGRAMS/INVALID/frederic_lafrance/2.min
# '.' is not a literal
x = .;
